--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     h2, h3, h4, h5, h6 { letter-spacing: 2px; font-weight: normal;}
   
     /* colors */
-    body { background-color: #000306; color: white;}
+    body { background-color: deepskyblue; color: white;}
     .container { background-color: #3F4038; border-color: #5B3E38}
     a { color: #62BECB; }
     a:hover {color: #82DEEB }
@@ -68,7 +68,7 @@
   
     <div class="main">
   
-      <h1>The Darren Unblocker</h1>
+      <h1>The Relay Web Filter Unblocker</h1>
       
       <div id="error"></div>
 
@@ -94,7 +94,7 @@
 </div>
       
       <h3>About The Relay Web Filter Unblocker</h3>
-      <p>The Darren Unblocker is a web proxy, similar to CGIProxy, PHProxy, or Glype, that allows users to evade filters and censorship and access blocked websites. </p>
+      <p>The Relay Web Filter Unblocker is a web proxy, similar to CGIProxy, PHProxy, or Glype, that allows users to evade filters and censorship and access blocked websites. </p>
       <p>It's designed to be extremely fast and compatible: It processes the data on-the-fly rather than buffering the entire response, and it only modifies URLs when necessary - relative ones will "just work". </p>
 
     </div>
