--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
     </div>
     
     <div class="footer">
-      <p><a href="https://github.com/nfriedly/node-unblocker">The Darren Unblocker</a> by <a href="http://www.nfriedly.com/" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
+      <p><a href="https://github.com/nfriedly/node-unblocker">The Relay Web Filter Unblocker</a> by <a href="http://www.nfriedly.com/" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
     </div>
   
   </div>
