--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   
     /* colors */
     body { background-color: deepskyblue; color: white;}
-    .container { background-color: #3F4038; border-color: #5B3E38}
+    .container { background-color: lightskyblue; border-color: #5B3E38}
     a { color: #62BECB; }
     a:hover {color: #82DEEB }
 
@@ -100,7 +100,7 @@
     </div>
     
     <div class="footer">
-      <p><a href="https://github.com/nfriedly/node-unblocker">The Relay Web Filter Unblocker</a> by <a href="http://www.nfriedly.com/" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
+      <p><a href="https://github.com/nfriedly/node-unblocker">The Relay Web Filter Unblocker</a> by <a href="https://www.youtube.com/channel/UCgrZeehr-nb35hJe6eolLfA" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
     </div>
   
   </div>
