--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   
     /* colors */
     body { background-color: deepskyblue; color: white;}
-    .container { background-color: lightskyblue; border-color: #5B3E38}
+    .container { background-color: #3F4038; border-color: #5B3E38}
     a { color: #62BECB; }
     a:hover {color: #82DEEB }
 
