--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,43 @@
         }
     }
   </style>
+	<style>
+.button {
+  position: relative;
+  background-color: #4CAF50;
+  border: none;
+  font-size: 28px;
+  color: #FFFFFF;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.button:after {
+  content: "";
+  background: #f1f1f1;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
+.button:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
+</style>
 </head>
 <body>
 
@@ -76,7 +113,7 @@
         <p>
           URL: 
           <input type="text" id="url" name="url" autofocus="autofocus" />
-          <input type="submit" value="ACTIVATE" />
+		<button class="button"><input type="submit" value="ACTIVATE" /></button>
         </p>
 
       </form>
