--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
         <p>
           URL: 
           <input type="text" id="url" name="url" autofocus="autofocus" />
-		<button class="button"><input type="submit" value="ACTIVATE" /></button>
+		<button class="button";input type="submit">Activate</button>
         </p>
 
       </form>
