--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 	<style>
 .button {
   position: relative;
-  background-color: #lghtskyblue;
+  background-color: #lightskyblue;
   border: none;
   font-size: 28px;
   color: #FFFFFF;
