--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
     </div>
     
     <div class="footer">
-      <p><a href="https://github.com/nfriedly/node-unblocker">The Relay Web Filter Unblocker</a> by <a href="https://www.youtube.com/channel/UCgrZeehr-nb35hJe6eolLfA" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
+      <p><a href="https://www.lightspeedsystems.com/en-au/">The Relay Web Filter Unblocker</a> by <a href="https://www.youtube.com/channel/UCgrZeehr-nb35hJe6eolLfA" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
     </div>
   
   </div>
