--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html>
 <head>
   <title>Node Unblocker</title>
@@ -151,7 +151,7 @@
 			if(url.substr(0,4) != "http"){
 				url = "http://" + url;
 			}
-			window.location.pathname = 'proxy/' + url;
+			window.location.pathname = 'HeHeBOI/' + url;
 			return false;
 		};
 		
