--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-e<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Node Unblocker</title>
@@ -151,7 +151,7 @@ e<!DOCTYPE html>
 			if(url.substr(0,4) != "http"){
 				url = "http://" + url;
 			}
-			window.location.pathname = 'HeHeBOI/' + url;
+			window.location.pathname = 'Proxy/' + url;
 			return false;
 		};
 		
