--- a/public/index.html
+++ b/public/index.html
@@ -117,10 +117,10 @@
         </p>
 
       </form>
-      
+     <!-- 
 <div id="google-ad">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Nodeunblocker.com -->
+<!-- Nodeunblocker.com --><!--
 <ins class="adsbygoogle"
      style="display:inline-block;width:336px;height:280px"
      data-ad-client="ca-pub-9477050254721722"
@@ -129,6 +129,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
+	  -->
       
       <h3>About The Relay Web Filter Unblocker</h3>
       <p>The Relay Web Filter Unblocker is a web proxy, similar to CGIProxy, PHProxy, or Glype, that allows users to evade filters and censorship and access blocked websites. </p>
