--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
      <!-- 
 <div id="google-ad">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Nodeunblocker.com --><!--
+Nodeunblocker.com<!--
 <ins class="adsbygoogle"
      style="display:inline-block;width:336px;height:280px"
      data-ad-client="ca-pub-9477050254721722"
