--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     a { color: #62BECB; }
     a:hover {color: #82DEEB }
 
-	#error {  border:1px dotted white; background: brown; }
+	#error {  border:1px dotted white; background: blue; }
     
     /* stripes and borders */
     
