--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Relay Web Filter Unblocker</title>
+  <title>The Relay Web Unblocker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- header font -->
   <link href="//fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" type="text/css">
@@ -135,17 +135,11 @@ Nodeunblocker.com
 </div>
 	  -->
       
-      <h3>About The Relay Web Filter Unblocker</h3>
-      <p>The Relay Web Filter Unblocker is a web proxy, similar to CGIProxy, PHProxy, or Glype, that allows users to evade filters and censorship and access blocked websites. </p>
-      <p>It's designed to be extremely fast and compatible: It processes the data on-the-fly rather than buffering the entire response, and it only modifies URLs when necessary - relative ones will "just work". </p>
-
-    </div>
-    
-	  <!--
-    <div class="footer">
+      <h3>About The Relay Web Unblocker</h3>
+      <p>The Relay Web Unblocker is a web proxy that is designed to get around the widley used school filter known as Relay web filter.</p>
+      <p>It's designed to be extremely fast and compatible. It is a private proxy that was only sent out to a few people</p>   
+      <p> </p>
       <p><a href="https://www.lightspeedsystems.com/en-au/">The Relay Web Filter Unblocker</a> by <a href="https://www.youtube.com/channel/UCgrZeehr-nb35hJe6eolLfA" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
-    </div>
-	-->
   
   </div>
 	<script>
