--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,8 @@ Nodeunblocker.com
       <h3>About The Relay Web Unblocker</h3>
       <p>The Relay Web Unblocker is a web proxy that is designed to get around the widley used school filter known as Relay web filter.</p>
       <p>It's designed to be extremely fast and compatible. It is a private proxy that was only sent out to a few people</p>   
-      <p> </p>
+      <p>Have</p>
+      <p>Fun!!</p>
       <p><a href="https://www.lightspeedsystems.com/en-au/">The Relay Web Filter Unblocker</a> by <a href="https://www.youtube.com/channel/UCgrZeehr-nb35hJe6eolLfA" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
   
   </div>
