--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
   
     <div class="main">
   
-      <h1>The Relay Web Filter Unblocker</h1>
+      <h1>The Relay Web Unblocker</h1>
       
       <div id="error"></div>
 
