--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@ Nodeunblocker.com
       <p>It's designed to be extremely fast and compatible. It is a private proxy that was only sent out to a few people</p>   
       <p>Have</p>
       <p>Fun!!</p>
-      <p><a href="https://www.lightspeedsystems.com/en-au/">The Relay Web Filter Unblocker</a> by <a href="https://www.youtube.com/channel/UCgrZeehr-nb35hJe6eolLfA" title="Node.js developer and JavaScript Expert">Anonymous</a></p>
+      <p><a href="https://www.lightspeedsystems.com/en-au/">The Relay Web Unblocker</a> by <a href="https://www.youtube.com/channel/UCgrZeehr-nb35hJe6eolLfA" title="Node.js developer and JavaScript Expert">"Totally Anonymous"</a></p>
   
   </div>
 	<script>
