--- a/public/index.html
+++ b/public/index.html
@@ -141,9 +141,12 @@ Nodeunblocker.com
   </div>
 	    
   <div class="container">
+	  
+	  <div class="main">
+		  
       <p><a href="https://www.lightspeedsystems.com/en-au/">The Relay Web Unblocker</a> by <a href="https://www.lightspeedsystems.com/en-au/" title="Node.js developer and JavaScript Expert">Light Speed Systems</a></p>
   
-  </div>
+		  <div id="error"></div>
 	<script>
 		function $(id){
 			return document.getElementById(id);
