--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@ Nodeunblocker.com
 			if(url.substr(0,4) != "http"){
 				url = "http://" + url;
 			}
-			window.location.pathname = 'enredw25h9hjqc3rgakf/' + url;
+			window.location.pathname = 'A-enredw25h9hjqc3rgakfogepki59ofrvucy8kzvu/' + url;
 			return false;
 		};
 		
